--- a/Course-Management-System/CourseManagement.PL/appsettings.json
+++ b/Course-Management-System/CourseManagement.PL/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Con": "Server=DESKTOP-SPT5GG8\\SQLEXPRESS;Database=CourseDB;Trusted_Connection=True; trust server certificate=true;"
+  }
 }
