--- a/Course-Management-System/CourseManagement.PL/appsettings.json
+++ b/Course-Management-System/CourseManagement.PL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Con": "Server=DESKTOP-SPT5GG8\\SQLEXPRESS;Database=CourseDB;Trusted_Connection=True; trust server certificate=true;"
+    "DefaultConnection": "Server=HASHEM\\SQLEXPRESS;Database=CourseManagementSystem;Trusted_Connection=True; TrustServerCertificate=True;"
   }
 }
